# rust-dms

./: Cargo.toml  README.md
dead-mans-switch/: README.md
dead-mans-switch/runtime/src/: dead_mans_switch.rs  lib.rs
dead-mans-switch/runtime/wasm/src/: lib.rs
dead-mans-switch/src/: chain_spec.rs  main.rs
runtime/: Cargo.toml
runtime/src/: dead_mans_switch.rs  lib.rs
runtime/wasm/: Cargo.toml  build.sh
src/: service.rs
