[profile.release]
lto = true
panic = 'abort'
[dependencies.dead-mans-switch-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['dead-mans-switch-runtime/std']

[lib]
crate-type = ['cdylib']

[workspace]
members = []

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'dead-mans-switch-runtime-wasm'
version = '1.0.0'
